# WSESP32S3-1.8-AMOLED

./: .gitignore  AMOLED_IMAGE_VIEWER.md  CHANGELOG.md  CMakeLists.txt  README.md  build.py  partitions_s3twatch.csv  sdkconfig.test
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: compile_all.yml  compile_prerelease.yml  custom_build.yml
components/M5GFX/: CMakeLists.txt
components/SensorLib/: CMakeLists.txt
components/SensorLib/src/: SensorLib.h  SensorQMI8658.cpp  SensorQMI8658.hpp  SensorWireHelper.cpp  SensorWireHelper.h
components/cst816t/: CMakeLists.txt  cst816t.c
components/cst816t/include/: cst816t.h
components/esp-idf-pn532/: CMakeLists.txt
components/esp-idf-pn532/include/: pn532.h  pn532_driver.h  pn532_driver_i2c.h
components/esp-idf-pn532/src/: pn532.c  pn532_driver.c  pn532_driver_i2c.c
components/gifdec/: CMakeLists.txt  gifdec.c  gifdec.h
components/io_manager/: CMakeLists.txt  i2c_bus_lock.c  i2c_bus_lock.h  io_manager.c  io_manager.h
components/lvgl/src/: lv_conf.h
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c  lvgl_spi_conf.h
components/lvgl_esp32_drivers/lvgl_i2c/: i2c_manager.c
components/lvgl_esp32_drivers/lvgl_tft/: disp_spi.c  ssd1306.c  st7789.c
components/lvgl_esp32_drivers/lvgl_touch/: cst820.c  xpt2046.c
components/pngle/: CMakeLists.txt
components/rm67162_qspi/: CMakeLists.txt  esp_lcd_rm67162.c  rm67162_qspi.c
components/rm67162_qspi/include/: esp_lcd_rm67162.h  rm67162_qspi.h
configs/: sdkconfig.CYD2432S028R  sdkconfig.CYD2USB  sdkconfig.CYD2USB2.4Inch  sdkconfig.CYD2USB2.4Inch_C_Varient  sdkconfig.CYDDualUSB  sdkconfig.CYDMicroUSB  sdkconfig.JC3248W535EN  sdkconfig.JCMK_DevBoardPro  sdkconfig.S3TWatch  sdkconfig.TDisplayS3-Touch  sdkconfig.TEmbedC1101  sdkconfig.awokmini  sdkconfig.cardputer  sdkconfig.cardputeradv  sdkconfig.crowtech7inch  sdkconfig.default.esp32  sdkconfig.default.esp32c3  sdkconfig.default.esp32c5  sdkconfig.default.esp32c6  sdkconfig.default.esp32s2  sdkconfig.default.esp32s3  sdkconfig.febrispro  sdkconfig.flipper.jcmk_gps  sdkconfig.ghostboard  sdkconfig.heltecv3  sdkconfig.lolins3pro  sdkconfig.marauderv4  sdkconfig.marauderv6  sdkconfig.minion  sdkconfig.poltergeist  sdkconfig.somethingsomething  sdkconfig.somethingsomething2  sdkconfig.sunton7inch  sdkconfig.tdeck  sdkconfig.waveshare7inch
docs/hugo docs/: config.toml
docs/hugo docs/archetypes/: default.md
docs/hugo docs/public/: index.html  index.json  sitemap.xml
docs/hugo docs/static/: _redirects
docs/wiki/: About.md  Board‐Specific‐Guide.md  CYD-ID-Guide.md  Chameleon-Ultra-Guide.md  Commands.md  Dual-Communication.md  Evil-Portal-Guide.md  FAQ.md  Features.md  Home.md  Infrared-Guide.md  Installation.md  Karma-Attack-Guide.md  Known-Issues.md  NFC-Guide.md  Rave-Mode.md  Troubleshooting.md  Usage.md
include/core/: callbacks.h  commandline.h  esp_comm_manager.h  ghostesp_version.h  glog.h  ouis.h  screen_mirror.h  serial_manager.h  uart_share.h  universal_ir.h  utils.h
include/gui/: lvgl_safe.h  options_view.h  popup.h  screen_layout.h  theme_palette_api.h
include/managers/: aerial_detector_manager.h  ap_manager.h  auth_digest.h  ble_manager.h  chameleon_manager.h  default_portal.h  dial_manager.h  display_manager.h  encoder_manager.h  ethernet_manager.h  fuel_gauge_manager.h  ghost_esp_site_gz.h  infrared_common.h  infrared_decoder.h  infrared_manager.h  infrared_protocols.h  infrared_timings.h  joystick_manager.h  rgb_manager.h  sd_card_manager.h  settings_manager.h  status_anim_utils.h  status_display_animations.h  status_display_manager.h  usb_keyboard_manager.h  wifi_manager.h  zigbee_manager.h
include/managers/ethernet/: eth_fingerprint.h  eth_http.h  eth_utils.h
include/managers/nfc/: desfire.h  flipper_nfc_compat.h  mifare_attack.h  mifare_classic.h  ndef.h  ntag_t2.h  write_ntag.h
include/managers/views/: clock_screen.h  error_popup.h  infrared_view.h  keyboard_screen.h  (+7 more)
main/: CMakeLists.txt  CMakeLists.txt.ghostesp  Kconfig.projbuild  display_test.c  display_test.cpp  display_test_shared.h  idf_component.yml  main.c.ghostesp_backup  mf_classic_dict.nfc
main.bak/: CMakeLists.txt  display_test.c  main.c.bak
main.bak/core/: callbacks.c  dns_server.c  ouis.json  screen_mirror.c  serial_manager.c  uart_share.c  universal_ir.c  utils.c
main.bak/gui/: options_view.c  popup.c  theme_palette.c
main.bak/managers/: ap_manager.c  auth_digest.c  dial_manager.c  display_manager.c  ethernet_manager.c  fuel_gauge_manager.c  joystick_manager.c  sd_card_manager.c  settings_manager.c  wifi_manager.c
main.bak/managers/nfc/: desfire.c  flipper_nfc_compat.c  ntag_t2.c  write_ntag.c
main.bak/managers/nfc/flipper_parsers/: all_in_one.c  bip.c  charliecard.c  gallagher.c  hi.c  hid.c  hworld.c  kazan.c  microel.c  plantain.c  saflok.c  skylanders.c  troika.c  trt.c  ventra.c  zolotaya_korona_online.c
main.bak/managers/status_display_animations/: anim_falling_leaves.c  anim_hud.c  anim_matrix.c  anim_starfield.c
main.bak/managers/views/: clock_screen.c  error_popup.c  flappy_ghost.c  keyboard_screen.c  nfc_view.c  options_screen.c  setup_wizard_screen.c  splash_screen.c
main/core/: commandline.c  esp_comm_manager.c  glog.c  ouis.c
main/gui/: lvgl_safe.c  screen_layout.c
main/managers/: aerial_detector_manager.c  ble_manager.c  chameleon_manager.c  encoder_manager.c  gps_manager.c  infrared_common.c  infrared_decoder.c  infrared_manager.c  infrared_protocol_encoders.c  infrared_protocols.c  infrared_rx_gpio.c  rgb_manager.c  status_display_manager.c  usb_keyboard_manager.c  zigbee_manager.c
press kit/: README.md
scripts/: update_universal_ir.py
scripts/control app/: Readme.md  app_settings.json  commands.py  dialogs.py  espidf_utils.py  gui.py  main.py  requirements.txt  serial_threads.py  settings.py  utils.py
scripts/screen_mirror/: ghost_mirror.py
scripts/site/: Dockerfile  build_html.sh  ghost_site.html  html_to_header.py
scripts/wireshark_extcap_installer/: README.md  ghostesp_extcap.bat  ghostesp_extcap.py  installer_gui.py  test_extcap.bat
(+443 files in other folders)
